--- a/devices.yml
+++ b/devices.yml
@@ -1,19 +1,5 @@
 ---
 - hosts: device
   sudo: yes
-  tasks:
-  - name: Install mosquitto apt repository key.
-    apt_key: url=http://repo.mosquitto.org/debian/mosquitto-repo.gpg.key
-  - name: Install mosquitto apt repository.
-    apt_repository: repo="deb http://repo.mosquitto.org/debian stable main"
-  - name: Install mosquitto clients.
-    apt: name=mosquitto-clients state=latest
-  - name: Install mosquitto python bindings.
-    apt: name=python-mosquitto state=latest
-  - name: Copy CA cert to device.
-    copy: src=./certs/ca.crt dest=/etc/mosquitto/ca_certificates/
-  - name: Copy client cert to device.
-    copy: src=./certs/client.crt dest=/etc/mosquitto/certs/
-  - name: Copy client key to device.
-    copy: src=./certs/client.key dest=/etc/mosquitto/certs/
-
+  roles:
+  - mqtt_client
