--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,3 +1,5 @@
+# Global default configuration values which are shared across roles.
+# Note each role can have its own default configuration under the role's default folder.
 ---
 # Location to store generated SSL certs and keys.
 ssl_dir: "{{ inventory_dir }}/security/ssl"
@@ -5,3 +7,14 @@ ssl_dir: "{{ inventory_dir }}/security/ssl"
 ssh_dir: "{{ inventory_dir }}/security/ssh"
 # Number of days generated certs should be valid.
 cert_days: 3650
+# Location to read WSGI web apps.
+wsgi_apps: "{{ inventory_dir }}/wsgi_apps"
+# Server root for WSGI web apps.
+wsgi_server_root: /usr/local/share/wsgi_apps
+# Root location for staging configuration files that will be copied to the server.
+staging_root: "{{ inventory_dir }}/staging"
+# Location to read gunicorn configuration files.
+# These will be copied to the /etc/gunicorn.d/ location on the server.
+gunicorn_config: "{{ staging_root }}/gunicorn.d"
+# Location to read nginx configuration files.
+# These will be copied to the /etc/nginx
