--- a/roles/wsgi_apps/tasks/main.yml
+++ b/roles/wsgi_apps/tasks/main.yml
@@ -16,9 +16,9 @@
 - name: Restart gunicorn.
   service: name=gunicorn state=restarted enabled=yes
 - name: Copy nginx configs.
-  copy: src={{ nginx_staging }}/ dest=/etc/nginx/sites-available
+  copy: src={{ nginx_staging }}/ dest=/etc/nginx/sites-available/
 - name: Enable nginx configs.
   file: src=/etc/nginx/sites-available/{{ item | basename }} dest=/etc/nginx/sites-enabled/{{ item | basename }} state=link
-  with_fileglob: "{{ nginx_staging }}/*.conf"
+  with_fileglob: "{{ nginx_staging }}/*"
 - name: Restart nginx.
   service: name=nginx state=restarted enabled=yes
