--- a/roles/mqtt_server/files/mosquitto.conf
+++ b/roles/mqtt_server/files/mosquitto.conf
@@ -175,7 +175,7 @@ keyfile /etc/mosquitto/certs/mqtt_server.key
 # the version of openssl that the broker was compiled against. For openssl >=
 # 1.0.1 the valid values are tlsv1.2 tlsv1.1 and tlsv1. For openssl < 1.0.1 the
 # valid values are tlsv1.
-#tls_version
+tls_version tlsv1
 
 # By default a TLS enabled listener will operate in a similar fashion to a
 # https enabled web server, in that the server has a certificate signed by a CA
@@ -414,7 +414,7 @@ use_identity_as_username true
 # Note that if the broker is running as a Windows service it will default to
 # "log_dest none" and neither stdout nor stderr logging is available.
 # Use "log_dest none" if you wish to disable logging.
-#log_dest stderr
+log_dest file /var/log/mosquitto/mosquitto.log
 
 # Types of messages to log. Use multiple log_type lines for logging
 # multiple types of messages.
@@ -422,17 +422,17 @@ use_identity_as_username true
 # none, subscribe, unsubscribe, all.
 # Note that debug type messages are for decoding the incoming/outgoing
 # network packets. They are not logged in "topics".
-#log_type error
-#log_type warning
-#log_type notice
+log_type error
+log_type warning
+log_type notice
 #log_type information
 
 # If set to true, client connection and disconnection messages will be included
 # in the log.
-#connection_messages true
+connection_messages true
 
 # If set to true, add a timestamp value to each log message.
-#log_timestamp true
+log_timestamp true
 
 # =================================================================
 # Security
