Update mosquitto to listen locally.

--- a/roles/mqtt_server/files/mosquitto.conf
+++ b/roles/mqtt_server/files/mosquitto.conf
@@ -249,7 +249,7 @@ use_identity_as_username true
 # address and so restrict access to the associated network and 
 # interface. By default, mosquitto will listen on all interfaces.
 # listener port-number [ip address/host name]
-#listener
+listener 1883 127.0.0.1
 
 # The maximum number of client connections to allow. This is 
 # a per listener setting.
@@ -450,7 +450,7 @@ log_timestamp true
 # false then a password file should be created (see the 
 # password_file option) to control authenticated client access. 
 # Defaults to true.
-allow_anonymous false
+allow_anonymous true
 
 # In addition to the clientid_prefixes, allow_anonymous and TLS 
 # authentication options, username based authentication is also 
